--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "devDependencies": {
     "lerna": "^3.18.3"
   },
-  "packages": [
-    "packages/*",
-    "packages/common/*"
+  "workspaces": [
+    "packages/*"
   ]
 }
