--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,5 +15,6 @@
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
-  }
+  },
+  "gitHead": "8e8714ec7fdf97c4feb48ee769883dbb51f2b8bf"
 }
