--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -22,5 +22,6 @@
   },
   "bugs": {
     "url": "https://github.com/chenlihu/test/issues"
-  }
+  },
+  "gitHead": "8e8714ec7fdf97c4feb48ee769883dbb51f2b8bf"
 }
